# SRF-Weather

./: .gitignore  LICENSE  README.md  README.rst  package-lock.json  pyproject.toml  swagger_srf_weather_v1_0_4.yaml  tox.ini
docs/: api.rst  conf.py  contribute.rst  index.rst  install.rst
srf_weather/: main.py  weather.py
srf_weather/models/: __init__.py  day.py  forecast.py  forecast2.py  forecast3.py  forecastday.py  geolocation.py  geolocation_name.py  geolocation_name1.py  geolocation_names_id.py  geolocation_names_obj.py  geolocation_names_search.py  geolocations_id.py  m400.py  min_maxcolor.py  model60minute.py  poi_type.py
tests/: test_srf_weather.py  weather_day_response.json  weather_hour_resonse_example.json
